--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Jogo de Rodadas</title>
 </head>
 <body>
-    <h1>Jogo de Rodadas</h1>
+    <h1> 🧙 A Grande Aventura 👩‍🎓 </h1>
     <script src="main.js"></script>
 </body>
 </html>
